--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,22 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.link.current {
+  position: relative;
+  color: #404bbf;
+}
+.link.current::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #404bbf;
 }
 .link:hover {
   color: #404bbf;
@@ -91,6 +107,7 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link-info:hover {
   color: #404bbf;
@@ -105,6 +122,17 @@ a {
   background: #2e2f42;
   height: 600px;
   padding: 188px 0 188px;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1440px;
 }
 .title {
   max-width: 496px;
@@ -179,6 +207,17 @@ a {
 .advantages-item {
   width: calc((100% - 72px) / 4);
 }
+.container-advantages {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  height: 112px;
+  background: #f4f4fd;
+
+  margin-bottom: 8px;
+}
 .team {
   font-weight: 700;
   font-size: 36px;
@@ -242,6 +281,42 @@ a {
 }
 .team-p {
   text-align: center;
+  margin-bottom: 8px;
+}
+.icon-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+.icon-list-team {
+  width: 40px;
+  height: 40px;
+}
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  fill: #f4f4fd;
+}
+
+.icon-list .social-link {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+.social-link:hover {
+  background-color: #31d0aa;
+}
+.container-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 8px;
 }
 .container-portfolio {
   padding: 32px 16px;
@@ -348,6 +423,8 @@ a {
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
