--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,7 @@ a {
   border: none;
   border-radius: 4px;
   margin: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button {
   background: #4d5ae5;
