--- a/css/styles.css
+++ b/css/styles.css
@@ -239,6 +239,8 @@ a {
   text-align: center;
   margin-bottom: 8px;
   width: calc((100% - 72px) / 4);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-list {
@@ -308,9 +310,10 @@ a {
   height: 40px;
   border-radius: 50%;
   background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:hover {
-  background-color: #31d0aa;
+  background-color: #404bbf;
 }
 .container-icon {
   display: flex;
