--- a/css/styles.css
+++ b/css/styles.css
@@ -353,6 +353,14 @@ a {
 .portfolio-item {
   width: calc((100% - 48px) / 3);
 }
+.portfolio-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-item:hover .overlay {
+  transform: translateY(0);
+}
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
@@ -371,6 +379,29 @@ a {
 
 .portfolio {
   margin-bottom: 72px;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px;
+
+  font-weight: 400;
+  font-size: 16px;
+
+  /* line-height: 24px; */
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  background: #4d5ae5;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-wrapper {
+  position: relative;
+  overflow: hidden;
 }
 .footer-page {
   background: #2e2f42;
