--- a/css/styles.css
+++ b/css/styles.css
@@ -366,6 +366,7 @@ a {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-p {
   font-weight: 400;
@@ -497,4 +498,27 @@ section {
 }
 img {
   display: block;
+}
+.container-footer {
+  display: flex;
+}
+.container-stodio {
+  margin-right: 120px;
+}
+.social-media {
+  font-weight: 500;
+  font-size: 16px;
+
+  /* line-height: 24px; */
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+.footer-list .social-link-footer:hover {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #31d0aa;
 }
