--- a/css/styles.css
+++ b/css/styles.css
@@ -352,6 +352,7 @@ a {
 }
 .portfolio-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -501,6 +502,7 @@ img {
 }
 .container-footer {
   display: flex;
+  align-items: baseline;
 }
 .container-stodio {
   margin-right: 120px;
@@ -516,6 +518,19 @@ img {
   margin-bottom: 16px;
 }
 .footer-list .social-link-footer:hover {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #31d0aa;
+}
+.footer-list {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  gap: 16px;
+}
+.footer-list .social-link-footer:focus {
   width: 40px;
   height: 40px;
   border-radius: 50%;
